# vpp-rts

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  build_report.py  crontab.txt  pyproject.toml  report_level2.md  requirements.txt  runtime_config.json  報告_VPP-RTS.docx  報告_VPP-RTS.tex
.claude/: settings.local.json
input/: aperiodic_n_sporadic.json
presentation/: 報告_VPP-RTS.docx  報告_VPP-RTS.tex
references/: demo_jobs.json  hw_illustration.md
src/: advanced_scheduler.py  config.py  evaluator.py  main.py  scheduler.py  task_generator.py  validator.py
src/evaluator/: __init__.py  evaluator.py
src/generator/: __init__.py  frame_size_calculator.py  task_generator.py  task_set_generator.py  task_set_validator.py
src/model/: __init__.py
src/model/asset/: charging_job.py  generator.py  processor_settings.py  renewable.py  storage.py
src/model/base/: base_model.py
src/model/market/: price.py
src/model/task/: expanded_job.py  rt_task.py  task_system.py
src/rt_scheduler/: __init__.py  acceptance_tester.py  expander.py  extractor.py  formulator.py  relaxation.py  rt_scheduler.py
src/utils/: __init__.py  file_io.py
test/: test_advanced_scheduler.py  test_validator_level2.py
test/evaluator/: test_evaluator.py
test/model/asset/: test_processor_settings.py
test/model/market/: test_price.py
test/model/task/: test_task_system.py
test/rt_scheduler/: __init__.py  test_acceptance_tester.py  test_expander.py  test_extractor.py  test_formulator.py  test_relaxation.py  test_rt_scheduler.py
